--- a/Login/Views/Login.xaml
+++ b/Login/Views/Login.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:Login.Views"
         mc:Ignorable="d"
         Title="Login" Height="450" Width="800">
+    <Window.Resources>
+        
+    </Window.Resources>
     <Grid>
         
     </Grid>
