--- a/Login/Views/Login.xaml
+++ b/Login/Views/Login.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="Login" Height="450" Width="800">
     <Window.Resources>
-        
+        <Style TargetType="Label">
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
     </Window.Resources>
     <Grid>
         
